[package]
name = "cch23-snowman9433"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shuttle-rocket = "0.43.0"
shuttle-runtime = "0.43.0"
tokio = "1.26.0"
