[package]
name = "cch23-snowman9433"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
cast_precision_loss = "allow"
needless_pass_by_value = "allow"
pedantic = "warn"
# restriction = "warn"
nursery = "warn"
# cargo = "warn"

[dependencies]
base64 = "0.22.0"
chrono = { version = "0.4.38", features = ["serde"] }
image = "0.25.1"
reqwest = "0.12.3"
rocket = { version = "0.5.0", features = ["json"] }
rustemon = "3.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shuttle-persist = "0.44.0"
shuttle-rocket = "0.44.0"
shuttle-runtime = "0.44.0"
shuttle-shared-db = { version = "0.44.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.4"
tokio = "1.26.0"
tracing = "0.1.40"
ulid = { version = "1.1.2", features = ["uuid"] }
uuid = "1.8.0"
